--- a/res/layout/title_navigation_bar.xml
+++ b/res/layout/title_navigation_bar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:background="@android:color/white" >
+    android:background="@android:color/black" >
 
     <!-- 返回键按钮 -->
 
@@ -11,12 +11,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:contentDescription="@drawable/ic_launcher"
+        android:contentDescription="@drawable/yo_hey_back_image"
         android:paddingBottom="@dimen/activity_navigation_bar_paddingtop"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_navigation_bar_paddingtop"
-        android:src="@drawable/rub_course_back_icon"
+        android:src="@drawable/yo_hey_back_image"
         android:visibility="gone" />
 
     <TextView
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="@dimen/activity_navigation_bar_paddingtop"
+        android:textColor="@color/write"
         android:textSize="@dimen/activity_navigation_bar_title_sise" />
 
     <!-- 右标题 -->
