--- a/res/layout/list_head_personal_post.xml
+++ b/res/layout/list_head_personal_post.xml
@@ -40,6 +40,7 @@
             android:layout_toEndOf="@id/personal_post_image_head"
             android:layout_toRightOf="@+id/personal_post_image_head"
             android:text="@string/zhao"
+            android:textColor="@color/main_title_text"
             android:textSize="14sp" />
 
         <!-- 时间 -->
@@ -53,6 +54,7 @@
             android:layout_below="@id/personal_post_nick_text_name"
             android:paddingTop="3dp"
             android:text="18:55"
+            android:textColor="@color/main_text"
             android:textSize="11sp" />
 
         <!-- 添加按钮 -->
@@ -92,12 +94,11 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="35.3dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingTop="5dp" >
+        android:paddingRight="10dp" >
 
         <View
             android:layout_width="0dp"
@@ -106,8 +107,8 @@
         <!-- 添加 -->
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:contentDescription="@drawable/main_jia_ru_zhan_dui"
@@ -120,7 +121,9 @@
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="1" />
+            android:text="1"
+            android:textColor="@color/main_text"
+            android:textSize="12sp" />
 
         <!-- 留言图标 -->
 
@@ -139,7 +142,9 @@
             android:layout_gravity="center"
             android:layout_marginEnd="12dp"
             android:layout_marginRight="12dp"
-            android:text="1" />
+            android:text="1"
+            android:textColor="@color/main_text"
+            android:textSize="12sp" />
         <!-- 点赞图标 -->
 
         <ImageView
@@ -157,7 +162,9 @@
             android:layout_gravity="center"
             android:layout_marginEnd="10dp"
             android:layout_marginRight="10dp"
-            android:text="1" />
+            android:text="1"
+            android:textColor="@color/main_text"
+            android:textSize="12sp" />
     </LinearLayout>
 
 </LinearLayout>
