--- a/res/layout/list_post_details.xml
+++ b/res/layout/list_post_details.xml
@@ -1,66 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingEnd="13dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="13dp"
-    android:paddingStart="10dp" >
+    android:layout_height="wrap_content" >
 
+    <View
+        android:id="@+id/list_post_details_line_view"
+        android:layout_width="fill_parent"
+        android:layout_height="0.5px"
+       
+        android:background="@color/line" />
     <!-- 评论人头像 -->
 
-    <ImageView
-        android:id="@+id/list_post_details_image_head"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="@drawable/zhu_ge_wo_ai_ni_tu"
-        android:src="@drawable/zhu_ge_wo_ai_ni_tu" />
-
-    <!-- 评论人昵称 -->
-
-    <TextView
-        android:id="@+id/list_post_details_text_name"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/list_post_details_image_head"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="3dp"
-        android:layout_toEndOf="@id/list_post_details_image_head"
-        android:layout_toRightOf="@id/list_post_details_image_head"
-        android:text="@string/meng_mei"
-        android:textSize="13sp" />
+        android:layout_below="@id/list_post_details_line_view"
+        android:layout_marginEnd="13dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="13dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp" >
 
-    <!-- 评论时间 -->
+        <ImageView
+            android:id="@+id/list_post_details_image_head"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:contentDescription="@drawable/zhu_ge_wo_ai_ni_tu"
+            android:src="@drawable/zhu_ge_wo_ai_ni_tu" />
 
-    <TextView
-        android:id="@+id/list_post_details_text_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/list_post_details_text_name"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="6dp"
-        android:layout_toEndOf="@id/list_post_details_image_head"
-        android:layout_toRightOf="@id/list_post_details_image_head"
-        android:text="@string/list_time"
-        android:textColor="@color/main_text"
-        android:textSize="10sp" />
+        <!-- 评论人昵称 -->
 
-    <!-- 评论内容 -->
+        <TextView
+            android:id="@+id/list_post_details_text_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@id/list_post_details_image_head"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="3dp"
+            android:layout_toEndOf="@id/list_post_details_image_head"
+            android:layout_toRightOf="@id/list_post_details_image_head"
+            android:text="@string/meng_mei"
+            android:textColor="@color/main_title_text"
+            android:textSize="13sp" />
 
-    <TextView
-        android:id="@+id/list_post_details_text_context"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/list_post_details_text_time"
-        android:layout_marginLeft="11dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginTop="9dp"
-        android:layout_toEndOf="@id/list_post_details_image_head"
-        android:layout_toRightOf="@id/list_post_details_image_head"
-        android:text="@string/carry_me_fly"
-        android:textColor="@color/main_text"
-        android:textSize="12sp" />
+        <!-- 评论时间 -->
+
+        <TextView
+            android:id="@+id/list_post_details_text_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/list_post_details_text_name"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="6dp"
+            android:layout_toEndOf="@id/list_post_details_image_head"
+            android:layout_toRightOf="@id/list_post_details_image_head"
+            android:text="@string/list_time"
+            android:textColor="@color/main_text"
+            android:textSize="10sp" />
+
+        <!-- 评论内容 -->
+
+        <TextView
+            android:id="@+id/list_post_details_text_context"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/list_post_details_text_time"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="8dp"
+            android:layout_toEndOf="@id/list_post_details_image_head"
+            android:layout_toRightOf="@id/list_post_details_image_head"
+            android:text="@string/carry_me_fly"
+            android:textColor="@color/main_text"
+            android:textSize="11sp" />
+    </RelativeLayout>
 
 </RelativeLayout>
