--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -19,5 +19,5 @@
     <color name="main_title_text">#2B2B2B</color>
     <color name="main_text">#888888</color>
     <color name="title_text">#333333</color>
-    
+    <color name="title_yellow">#e9f83c</color>
 </resources>
