--- a/res/layout/fragment_text.xml
+++ b/res/layout/fragment_text.xml
@@ -8,6 +8,8 @@
         android:id="@+id/layou_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/fragment_main_selection_bar"
+        android:layout_marginBottom="-8dp"
         android:orientation="vertical" >
     </android.support.v4.view.ViewPager>
 
