--- a/res/layout/list_dynamic.xml
+++ b/res/layout/list_dynamic.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/write"
-    android:padding="10dp" >
+    android:background="@color/write" >
 
     <!-- 动态页面 -->
 
@@ -11,6 +10,9 @@
         android:id="@+id/list_dynamic_layout_head_portrait"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
@@ -67,28 +69,40 @@
     </LinearLayout>
     <!-- 用户发送内容 -->
 
-    <LinearLayout
+    <TextView
         android:id="@+id/list_dynamic_layout_context"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@id/list_dynamic_layout_head_portrait"
-        android:layout_centerVertical="true"
-        android:orientation="vertical" >
-    </LinearLayout>
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/main_text"
+        android:textSize="12sp" >
+    </TextView>
+
+    <AbsoluteLayout
+        android:id="@+id/list_dynamic_absolute_image"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/list_dynamic_layout_context"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp" >
+    </AbsoluteLayout>
 
     <RelativeLayout
+        android:id="@+id/list_dynamic_relative_linear"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@id/list_dynamic_layout_context"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="10dp"
-         >
+        android:layout_below="@id/list_dynamic_absolute_image"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp" >
 
         <!-- 转发 -->
 
@@ -99,28 +113,76 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:layout_marginLeft="53dp"
+            android:layout_marginRight="53dp"
             android:contentDescription="@drawable/iconfont_zhuanfa"
             android:src="@drawable/iconfont_zhuanfa" />
+
         <!-- 留言 -->
 
-        <ImageView
-            android:id="@+id/list_dynamic_image_leave_a_message"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:contentDescription="@drawable/iconfont_xinxi"
-            android:src="@drawable/iconfont_xinxi" />
+            android:layout_marginLeft="90dp"
+            android:layout_marginRight="90dp"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/list_dynamic_image_leave_a_message"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:contentDescription="@drawable/iconfont_xinxi"
+                android:src="@drawable/iconfont_xinxi" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:text="1"
+                android:textColor="@color/main_text"
+                android:textSize="11sp" />
+        </LinearLayout>
+
         <!-- 分享 -->
 
-        <ImageView
-            android:id="@+id/list_dynamic_image_like"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:contentDescription="@drawable/iconfont_dianzan"
-            android:src="@drawable/iconfont_dianzan" />
+           
+            android:layout_marginEnd="53dp"
+            android:layout_marginLeft="90dp"
+            android:layout_marginRight="53dp"
+            android:layout_marginStart="90dp"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/list_dynamic_image_like"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:contentDescription="@drawable/iconfont_dianzan"
+                android:src="@drawable/iconfont_dianzan" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:text="1"
+                android:textColor="@color/main_text"
+                android:textSize="11sp" />
+        </LinearLayout>
     </RelativeLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:layout_below="@id/list_dynamic_relative_linear"
+        android:layout_marginTop="10dp"
+        android:background="@color/line" />
 
 </RelativeLayout>
