--- a/res/layout/game_zone_main.xml
+++ b/res/layout/game_zone_main.xml
@@ -2,11 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:baselineAligned="false"
+    android:orientation="horizontal" >
     <!-- 游戏大区 -->
     <ListView 
-        android:id="@+id/game_zone_listview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+        android:id="@+id/game_zone_listview1"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+    <ListView 
+       android:id="@+id/game_zone_listview2"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:layout_weight="1"
+       android:visibility="gone" />
 </LinearLayout>
