我的帖子页面修改完毕

--- a/res/layout/activity_yue_lu_my_posts.xml
+++ b/res/layout/activity_yue_lu_my_posts.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/thread_gray"
     android:orientation="vertical" >
 
     <include
@@ -14,16 +15,27 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/text_stroke" >
+        android:background="@color/write"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
 
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp"
-            android:padding="5dp"
+            android:layout_weight="1"
+            android:padding="10dp"
             android:text="@string/posted_messages"
             android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:contentDescription="@drawable/right_arrow_icon"
+            android:src="@drawable/right_arrow_icon" />
     </LinearLayout>
     <!-- 我加入的帖子 -->
 
@@ -32,16 +44,27 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:background="@drawable/text_stroke" >
+        android:background="@color/write"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
 
         <TextView
-            android:layout_width="fill_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginStart="15dp"
-            android:padding="5dp"
+            android:layout_weight="1"
+            android:padding="10dp"
             android:text="@string/post_added"
             android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:contentDescription="@drawable/right_arrow_icon"
+            android:src="@drawable/right_arrow_icon" />
     </LinearLayout>
 
 </LinearLayout>
