--- a/res/layout/list_post_had_sent_and_add_view.xml
+++ b/res/layout/list_post_had_sent_and_add_view.xml
@@ -4,29 +4,32 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:background="@color/thread_gray" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/click_the_list_to_change_the_background"
         android:baselineAligned="false"
         android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:background="@drawable/click_the_list_to_change_the_background"
-   >
+        android:orientation="horizontal" >
 
         <RelativeLayout
-            android:layout_width="90dp"         
-            android:layout_height="90dp"  
-         	android:layout_marginTop="-10dp"
-         	android:layout_marginBottom="-10dp"
+            android:layout_width="105dp"
+            android:layout_height="105dp"
+            android:layout_marginBottom="-10dp"
             android:layout_marginLeft="-10dp"
             android:layout_marginRight="-10dp"
+            android:layout_marginTop="-20dp"
             android:gravity="center" >
 
             <ImageView
                 android:id="@+id/list_post_details_image_head_portrait"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-               
                 android:layout_centerInParent="true"
                 android:contentDescription="@drawable/click_the_list_to_change_the_background_shape"
                 android:src="@drawable/ic_launcher" />
@@ -50,48 +53,51 @@
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-              >
+                android:orientation="horizontal" >
 
                 <TextView
                     android:id="@+id/list_post_details_text_user_name"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:text="1253"
+                    android:textColor="@color/main_title_text"
                     android:textSize="13sp" />
 
                 <ImageView
                     android:layout_width="13dp"
-                    android:layout_height="13dp"
+                    android:layout_height="7dp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
-                    
-                    android:contentDescription="@drawable/iconfont_liulan"
-                    android:src="@drawable/iconfont_liulan" />
+                    android:contentDescription="@drawable/the_number_of_posts_to_view"
+                    android:src="@drawable/the_number_of_posts_to_view" />
 
                 <TextView
                     android:id="@+id/list_post_details_text_yan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:textColor="@color/main_text"
                     android:textSize="10sp" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
-                    android:contentDescription="@drawable/rub_course_grey_comment"
-                    android:src="@drawable/rub_course_grey_comment" />
+                    android:layout_width="11dp"
+                    android:layout_height="10dp"
+                    android:layout_marginLeft="23dp"
+                    android:layout_marginStart="23dp"
+                    android:contentDescription="@drawable/post_message"
+                    android:src="@drawable/post_message" />
 
                 <TextView
                     android:id="@+id/list_post_details_text_message"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
+                    android:textColor="@color/main_text"
                     android:textSize="10sp" />
             </LinearLayout>
 
@@ -99,15 +105,19 @@
                 android:id="@+id/list_post_details_text_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                
+                android:layout_marginTop="7dp"
+                android:textColor="@color/main_text"
                 android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/list_post_details_text_context"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-           
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="12dp"
+                android:textColor="@color/main_text"
                 android:textSize="13sp" />
         </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
