--- a/res/drawable/shape_win_rounded_stroke_fill_color.xml
+++ b/res/drawable/shape_win_rounded_stroke_fill_color.xml
@@ -2,11 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <stroke
-        android:width="1dp"
-        android:color="@color/line" />
-
-    <solid android:color="#6C6C6C" />
+        android:width="1px"
+        android:color="#01A484" />
 
     <corners android:radius="10px" />
+
+    <solid android:color="#01A484" />
 
 </shape>
