--- a/res/layout/activity_yue_lu_my_posts.xml
+++ b/res/layout/activity_yue_lu_my_posts.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:id="@+id/my_posts_linear_message"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:background="@color/write"
         android:gravity="center_vertical"
@@ -42,7 +42,7 @@
     <LinearLayout
         android:id="@+id/my_posts_linear_added"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:background="@color/write"
         android:gravity="center_vertical"
