--- a/res/layout/activity_yuye_lu_homepage.xml
+++ b/res/layout/activity_yuye_lu_homepage.xml
@@ -2,12 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/light_gray"
+    android:background="@color/thread_gray"
     android:orientation="vertical" >
 
     <include
         android:id="@+id/homepage_title_bar"
         layout="@layout/title_navigation_bar" />
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="10dp"
+        android:background="@color/thread_gray" />
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -16,107 +21,111 @@
         android:orientation="vertical" >
 
         <LinearLayout
+            android:id="@+id/homepage_text_my_msg"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/text_stroke"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/write"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="6dp" >
+            android:orientation="horizontal" >
 
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginStart="20dp"
                 android:contentDescription="@drawable/iconfont_geren"
                 android:src="@drawable/iconfont_geren" />
 
             <TextView
-                android:id="@+id/homepage_text_my_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/my_msg"
-                android:textSize="13sp" />
+                android:textColor="@color/main_text"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/homepage_text_my_post"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/text_stroke"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/write"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="6dp" >
+            android:orientation="horizontal" >
 
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
-                android:contentDescription="@drawable/iconfont_geren"
-                android:src="@drawable/iconfont_biaoqian" />
+                android:layout_marginStart="20dp"
+                android:contentDescription="@drawable/my_posts_icon"
+                android:src="@drawable/my_posts_icon" />
 
             <TextView
-                android:id="@+id/homepage_text_my_post"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/my_post"
-                android:textSize="13sp" />
+                android:textColor="@color/main_text"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/homepage_text_score"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/text_stroke"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/write"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="6dp" >
+            android:orientation="horizontal" >
 
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginStart="20dp"
                 android:contentDescription="@drawable/iconfont_geren"
-                android:src="@drawable/iconfont_icon" />
+                android:src="@drawable/integral_icon" />
 
             <TextView
-                android:id="@+id/homepage_text_score"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/score"
-                android:textSize="13sp" />
+                android:textColor="@color/main_text"
+                android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/homepage_text_system_set"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/text_stroke"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/write"
             android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="6dp" >
+            android:orientation="horizontal" >
 
             <ImageView
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginEnd="10dp"
+                android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
-                android:contentDescription="@drawable/iconfont_geren"
-                android:src="@drawable/iconfont_shezhi" />
+                android:layout_marginStart="20dp"
+                android:contentDescription="@drawable/system_settings_icon"
+                android:src="@drawable/system_settings_icon" />
 
             <TextView
-                android:id="@+id/homepage_text_system_set"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/system_set"
-                android:textSize="13sp" />
+                android:textColor="@color/main_text"
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 
