--- a/res/layout/activity_yue_lu_forwarding.xml
+++ b/res/layout/activity_yue_lu_forwarding.xml
@@ -63,6 +63,7 @@
         android:id="@+id/forwarding_edit_reason"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
         android:layout_weight="1"
         android:background="@null"
         android:gravity="top"
@@ -74,14 +75,13 @@
         android:id="@+id/forwarding_check_box_comment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="9dp"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
         android:button="@null"
         android:drawableLeft="@drawable/tick_box"
         android:drawablePadding="5dp"
         android:drawableStart="@drawable/tick_box"
+        android:padding="0dp"
         android:text="同时评论"
         android:textColor="@color/main_title_text"
         android:textSize="12sp" />
