--- a/res/layout/activity_yue_lu_personal_information.xml
+++ b/res/layout/activity_yue_lu_personal_information.xml
@@ -59,7 +59,7 @@
                     <LinearLayout
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="7dp"
+                        android:layout_marginTop="4dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal" >
 
@@ -82,7 +82,11 @@
                             android:layout_marginEnd="55dp"
                             android:layout_marginRight="55dp"
                             android:background="@drawable/rounded_gray_line_on_a_white_background"
-                            android:padding="3dp"
+                            android:gravity="center_vertical"
+                            android:paddingBottom="3dp"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:paddingTop="3dp"
                             android:text="@string/available_first_win"
                             android:textColor="#F0FF44"
                             android:textSize="12sp" />
@@ -134,7 +138,10 @@
                             android:background="@drawable/rounded_gray_line_on_a_white_background"
                             android:gravity="center"
                             android:orientation="horizontal"
-                            android:padding="3dp" >
+                            android:paddingBottom="3dp"
+                            android:paddingLeft="5dp"
+                            android:paddingRight="5dp"
+                            android:paddingTop="3dp" >
 
                             <ImageView
                                 android:id="@+id/personal_user_text_sex"
