--- a/res/layout/activity_yuye_lu_homepage.xml
+++ b/res/layout/activity_yuye_lu_homepage.xml
@@ -30,20 +30,20 @@
             android:orientation="horizontal" >
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
                 android:layout_marginStart="20dp"
-                android:contentDescription="@drawable/iconfont_geren"
-                android:src="@drawable/iconfont_geren" />
+                android:contentDescription="@drawable/yo_hey_head_portrait"
+                android:src="@drawable/yo_hey_head_portrait" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/my_msg"
-                android:textColor="@color/main_text"
+                android:textColor="@color/main_title_text"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -70,7 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/my_post"
-                android:textColor="@color/main_text"
+                android:textColor="@color/main_title_text"
                 android:textSize="12sp" />
         </LinearLayout>
 
@@ -97,22 +97,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/score"
-                android:textColor="@color/main_text"
+                android:textColor="@color/main_title_text"
                 android:textSize="12sp" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/homepage_text_system_set"
             android:layout_width="fill_parent"
-            android:layout_height="50dp"
+            android:layout_height="40dp"
             android:layout_marginBottom="10dp"
             android:background="@color/write"
             android:gravity="center_vertical"
             android:orientation="horizontal" >
 
             <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:layout_marginEnd="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="10dp"
@@ -121,11 +121,20 @@
                 android:src="@drawable/system_settings_icon" />
 
             <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/system_set"
+                android:textColor="@color/main_title_text"
+                android:textSize="12sp" />
+
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/system_set"
-                android:textColor="@color/main_text"
-                android:textSize="12sp" />
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:contentDescription="@drawable/right_arrow_icon"
+                android:src="@drawable/right_arrow_icon" />
         </LinearLayout>
     </LinearLayout>
 
