--- a/res/layout/commodity_image_main.xml
+++ b/res/layout/commodity_image_main.xml
@@ -5,20 +5,150 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-        <ImageView 
-            android:id="@+id/integral_exchange_commodity_image1"
-            android:layout_width="0dp"
+        <LinearLayout 
+            android:id="@+id/commodity1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:contentDescription="@drawable/ic_launcher"/>
-        <ImageView
-            android:id="@+id/integral_exchange_commodity_image2"
-            android:layout_width="0dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:orientation="vertical">
+            <RelativeLayout 
+                android:layout_width="104dp"
+                android:layout_height="167dp">
+                <ImageView 
+                    android:id="@+id/integral_exchange_commodity_image1"
+                    android:layout_width="104dp"
+                    android:layout_height="167dp"
+                    android:src="@drawable/yo_hey_game_commodity"
+                    android:contentDescription="@drawable/yo_hey_game_commodity"/>
+                <TextView 
+                    android:layout_width="match_parent"
+                    android:layout_height="17dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="#77000000"
+                    android:gravity="center"
+                    android:text="源计划 雷"
+                    android:textColor="#ffffff"
+                    android:textSize="12sp"/>
+            </RelativeLayout> 
+            <LinearLayout 
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="11dp"
+                android:orientation="horizontal">
+                <ImageView 
+                    android:layout_width="20dp"
+                    android:layout_height="19dp"
+                    android:src="@drawable/yo_hey_gold_image"
+                    android:contentDescription="@drawable/yo_hey_gold_image"/>
+                <TextView 
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
+                    android:gravity="center_vertical"
+                    android:text="500"
+                    android:textColor="#888888"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout 
+            android:id="@+id/commodity2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:contentDescription="@drawable/ic_launcher"/>
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:orientation="vertical">
+            <RelativeLayout 
+                android:layout_width="104dp"
+                android:layout_height="167dp">
+                <ImageView 
+                    android:id="@+id/integral_exchange_commodity_image2"
+                    android:layout_width="104dp"
+                    android:layout_height="167dp"
+                    android:src="@drawable/yo_hey_game_commodity"
+                    android:contentDescription="@drawable/yo_hey_game_commodity"/>
+                <TextView 
+                    android:layout_width="match_parent"
+                    android:layout_height="17dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="#77000000"
+                    android:gravity="center"
+                    android:text="源计划 雷"
+                    android:textColor="#ffffff"
+                    android:textSize="12sp"/>
+            </RelativeLayout> 
+            <LinearLayout 
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="11dp"
+                android:orientation="horizontal">
+                <ImageView 
+                    android:layout_width="20dp"
+                    android:layout_height="19dp"
+                    android:src="@drawable/yo_hey_gold_image"
+                    android:contentDescription="@drawable/yo_hey_gold_image"/>
+                <TextView 
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
+                    android:gravity="center_vertical"
+                    android:text="500"
+                    android:textColor="#888888"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+        </LinearLayout>
+        <LinearLayout 
+            android:id="@+id/commodity3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="11dp"
+            android:layout_marginStart="11dp"
+            android:orientation="vertical">
+            <RelativeLayout 
+                android:layout_width="104dp"
+                android:layout_height="167dp">
+                <ImageView 
+                    android:id="@+id/integral_exchange_commodity_image3"
+                    android:layout_width="104dp"
+                    android:layout_height="167dp"
+                    android:src="@drawable/yo_hey_game_commodity"
+                    android:contentDescription="@drawable/yo_hey_game_commodity"/>
+                <TextView 
+                    android:layout_width="match_parent"
+                    android:layout_height="17dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="#77000000"
+                    android:gravity="center"
+                    android:text="源计划 雷"
+                    android:textColor="#ffffff"
+                    android:textSize="12sp"/>
+            </RelativeLayout> 
+            <LinearLayout 
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="11dp"
+                android:orientation="horizontal">
+                <ImageView 
+                    android:layout_width="20dp"
+                    android:layout_height="19dp"
+                    android:src="@drawable/yo_hey_gold_image"
+                    android:contentDescription="@drawable/yo_hey_gold_image"/>
+                <TextView 
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginStart="7dp"
+                    android:gravity="center_vertical"
+                    android:text="500"
+                    android:textColor="#888888"
+                    android:textSize="15sp"/>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 
