--- a/res/layout/integral_exchange_commodity.xml
+++ b/res/layout/integral_exchange_commodity.xml
@@ -3,6 +3,7 @@
     android:id="@+id/integral_exchange_commodity_linear1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#f2f4f5"
     android:orientation="vertical" >
     <!-- 积分兑换商品界面 -->
     <include 
