--- a/res/layout/integral_store_main.xml
+++ b/res/layout/integral_store_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background"
+    android:background="#f2f4f5"
     android:orientation="vertical" >
     <!-- 积分商城界面 -->
     <include 
@@ -10,60 +10,156 @@
         layout="@layout/title_navigation_bar"/>
     <ImageView 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:contentDescription="@drawable/ic_launcher"
-        android:src="@drawable/ic_launcher"/>
-    <TextView 
-        android:id="@+id/my_integral"
+        android:layout_height="135dp"
+        android:contentDescription="@drawable/dynamic_banner"
+        android:src="@drawable/dynamic_banner"/>
+    <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="10dp"
         android:background="#ffffff"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"/>
+        android:orientation="horizontal">
+        <TextView 
+            android:id="@+id/my_integral"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:background="#ffffff"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:textSize="15sp"
+            android:textColor="#323232"/>
+        <ImageView 
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/right_arrow_icon"
+            android:contentDescription="@drawable/right_arrow_icon"/>
+    </LinearLayout>
+    
     <View 
         android:layout_width="match_parent"
-        android:layout_height="4dp"/>
-    <TextView 
-        android:id="@+id/integral_buy_store"
+        android:layout_height="0.5dp"/>
+    <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:layout_height="50dp"
         android:background="#ffffff"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"/>
+        android:orientation="horizontal">
+        <TextView 
+            android:id="@+id/integral_buy_store"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:background="#ffffff"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:textSize="15sp"
+            android:textColor="#323232"/>
+        <ImageView 
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/right_arrow_icon"
+            android:contentDescription="@drawable/right_arrow_icon"/>
+    </LinearLayout>
     <View 
         android:layout_width="match_parent"
-        android:layout_height="4dp"/>
-    <TextView 
-        android:id="@+id/integral_store_buy"
+        android:layout_height="0.5dp"/>
+    <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:layout_height="50dp"
         android:background="#ffffff"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"/>
+        android:orientation="horizontal">
+        <TextView 
+            android:id="@+id/integral_store_buy"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:background="#ffffff"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:textSize="15sp"
+            android:textColor="#323232"/>
+        <ImageView 
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/right_arrow_icon"
+            android:contentDescription="@drawable/right_arrow_icon"/>
+    </LinearLayout>
     <View 
         android:layout_width="match_parent"
-        android:layout_height="4dp"/>
-    <TextView 
-        android:id="@+id/integral_store_receive"
+        android:layout_height="17dp"/>
+    <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:layout_height="50dp"
         android:background="#ffffff"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"/>
+        android:orientation="horizontal">
+        <TextView 
+            android:id="@+id/integral_store_receive"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:background="#ffffff"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:textSize="15sp"
+            android:textColor="#323232"/>
+        <ImageView 
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/right_arrow_icon"
+            android:contentDescription="@drawable/right_arrow_icon"/>
+    </LinearLayout>
     <View 
         android:layout_width="match_parent"
-        android:layout_height="4dp"/>
-    <TextView 
-        android:id="@+id/integral_store_send"
+        android:layout_height="0.5dp"/>
+   <LinearLayout 
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
+        android:layout_height="50dp"
         android:background="#ffffff"
-        android:paddingTop="6dp"
-        android:paddingBottom="6dp"/>
-
+        android:orientation="horizontal">
+        <TextView 
+            android:id="@+id/integral_store_send"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:background="#ffffff"
+            android:paddingTop="6dp"
+            android:paddingBottom="6dp"
+            android:textSize="15sp"
+            android:textColor="#323232"/>
+        <ImageView 
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/right_arrow_icon"
+            android:contentDescription="@drawable/right_arrow_icon"/>
+        </LinearLayout>
 </LinearLayout>
